refactor: fixed modularization problems
Refs: #22 #23