@@ -2,14 +2,12 @@
 		 xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
 		 xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
-	<groupId>it1901</groupId>
-	<artifactId>logger</artifactId>
-	<packaging>pom</packaging>
-	<version>0.0.1-SNAPSHOT</version>
-	<modules>
-		<module>core</module>
-		<module>fxui</module>
-	</modules>
+	<artifactId>fxui</artifactId>
+	<parent>
+		<artifactId>logger</artifactId>
+		<groupId>it1901</groupId>
+		<version>0.0.1-SNAPSHOT</version>
+	</parent>
 
 	<dependencies>
 		<!-- JavaFX -->
@@ -32,54 +30,24 @@
 			<version>4.0.16-alpha</version>
 			<scope>test</scope>
 		</dependency>
+		<dependency>
+			<groupId>it1901</groupId>
+			<artifactId>core</artifactId>
+			<version>0.0.1-SNAPSHOT</version>
+			<scope>compile</scope>
+		</dependency>
 	</dependencies>
 
-	<properties>
-		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-	</properties>
-
 	<build>
-		<sourceDirectory>src</sourceDirectory>
-		<resources>
-			<resource>
-				<directory>src</directory>
-				<includes>
-					<include>**/*.fxml</include>
-					<include>**/*.png</include>
-				</includes>
-			</resource>
-		</resources>
-		<testSourceDirectory>test</testSourceDirectory>
-		<testResources>
-			<testResource>
-				<directory>test</directory>
-				<includes>
-					<include>**/*.fxml</include>
-					<include>**/*.png</include>
-				</includes>
-			</testResource>
-		</testResources>
-
 		<plugins>
 			<!-- Compiling code -->
 			<plugin>
 				<artifactId>maven-compiler-plugin</artifactId>
-				<version>3.8.1</version>
-				<configuration>
-					<encoding>UTF-8</encoding>
-					<release>14</release>
-				</configuration>
 			</plugin>
 
 			<!-- Running tests -->
 			<plugin>
-				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-surefire-plugin</artifactId>
-				<version>3.0.0-M5</version>
-				<configuration>
-					<redirectTestOutputToFile>true</redirectTestOutputToFile>
-					<argLine>--add-exports javafx.graphics/com.sun.javafx.application=ALL-UNNAMED</argLine>
-				</configuration>
 			</plugin>
 
 			<!-- Running JavaFX code -->
@@ -88,7 +56,7 @@
 				<artifactId>javafx-maven-plugin</artifactId>
 				<version>0.0.4</version>
 				<configuration>
-					<mainClass>main.java.logger.ui.App</mainClass>
+					<mainClass>logger.ui.App</mainClass>
 				</configuration>
 			</plugin>
 		</plugins>
